--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,13 +17,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Noto+Sans+Old+Persian&display=swap" rel="stylesheet">
 </head>
 
-<body style="color: white; font-size: 100px; text-align: center; display: flex; width: 100%; flex-direction: row; justify-content: space-between;">
-    <div style="font-family: 'Noto Sans Old Persian', sans-serif; writing-mode: vertical-rl; overflow: visible; white-space: nowrap; max-width: fit-content;">
-        𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠
+<body class="background" style="color: white; font-size: 100px; text-align: center; display: flex; width: 100%; flex-direction: row; justify-content: space-between;">
+    <div style="font-size: 0.5em; font-family: 'Noto Sans Old Persian', sans-serif; writing-mode: vertical-rl; overflow: visible; white-space: nowrap; max-width: fit-content; max-height: 100%;">
+        𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠
     </div>
     <div class="content" style="flex: 1 1; display: flex; flex-direction: column; align-items: center;">
         <p id="title" style="position: relative; margin-top: 0.5em" class="cursor">Welcome to the Ancient Scrolls</p>
-        <img id="cow" src="icon.svg">
+        <div id="cowClickBox" style="width: 400px; height: 400px; overflow: visible; ">
+            <object id="cow" data="icon.svg" style="cursor: pointer; pointer-events: none;"></object>
+        </div>
         <img src="Cowpat.gif" style="max-width: 300px">
         <img src="Moo.gif">
         <img src="NiceMan.gif">
@@ -33,8 +35,8 @@
         </p>
 
     </div>
-    <div style="font-family: 'Noto Sans Old Persian', sans-serif; writing-mode: vertical-rl; overflow: visible; white-space: nowrap; max-width: fit-content;">
-        𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠
+    <div style="font-size: 0.5em; font-family: 'Noto Sans Old Persian', sans-serif; writing-mode: vertical-rl; overflow: visible; white-space: nowrap; max-width: fit-content;">
+        𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠𐎹𐎫𐎼𐏐𐎩𐎥𐎫𐎡𐏐𐏁𐎠𐎴𐎫𐎡𐎴𐎹𐎠        
     </div>
     <script src="main.js"></script>
 </body>
